cluster/manifests/utilities/redis/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-haproxy
spec:
  revisionHistoryLimit: 1
  selector:
    matchLabels: &labels
      app.kubernetes.io/component: redis-haproxy
  template:
    metadata:
      labels:
        <<: *labels
    spec:
      automountServiceAccountToken: false
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: haproxy
          securityContext:
            privileged: false
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsUser: 65532
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
          image: haproxy
          imagePullPolicy: IfNotPresent
          ports:
            - name: stats
              containerPort: 8080
              protocol: TCP
            - name: probe
              containerPort: 8081
              protocol: TCP
            - name: writer
              containerPort: 6380
              protocol: TCP
            - name: reader
              containerPort: 6381
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /healthz
              port: probe
            initialDelaySeconds: 5
            periodSeconds: 1
            successThreshold: 3
            failureThreshold: 1
            timeoutSeconds: 5
          lifecycle:
            preStop:
              sleep:
                seconds: 3
          volumeMounts:
            - name: config
              mountPath: /usr/local/etc/haproxy
              readOnly: true
        - name: haproxy-exporter
          securityContext:
            privileged: false
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsUser: 65532
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
          image: quay.io/prometheus/haproxy-exporter
          imagePullPolicy: IfNotPresent
          args:
            - --haproxy.scrape-uri=http://127.0.0.1:8080/stats?stats;csv
          ports:
            - name: metrics
              containerPort: 9101
              protocol: TCP
      volumes:
        - name: tmp
          emptyDir:
            medium: Memory
        - name: config
          emptyDir:
            medium: Memory
        - name: redis-haproxy
          configMap:
            name: redis-haproxy
