cluster/manifests/utilities/redis/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    app.kubernetes.io/name: redis
  ports:
    - name: tcp-redis
      port: 6379
      protocol: TCP
      targetPort: redis
    - name: tcp-sentinel
      port: 26379
      protocol: TCP
      targetPort: sentinel
---
apiVersion: v1
kind: Service
metadata:
  name: redis-haproxy
spec:
  selector:
    app.kubernetes.io/name: redis-haproxy
  ports:
    - name: tcp
      port: 6379
      protocol: TCP
      targetPort: redis
